# FastApi

./: .gitignore  README.md  makefile  pyproject.toml
