[tool.poetry]
name = "fastapi-back"
version = "0.1.0"
description = "Criando Api com FastApi"
authors = ["Luciano Ribeiro <luciano.ribeiro.melo02@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_back"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.45"
alembic = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
